Fix overflowing content horizontally on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,12 @@
     --black: hsl(0, 0%, 8%);
 }
 
-html {
+html, body {
     height: 100%;
+    overflow-x: hidden;
+}
+
+html {
     font-size: 100%;
     box-sizing: border-box;
 }
@@ -25,10 +29,8 @@ html {
 body {
     display: flex;
     justify-content: center;
-    height: 100%;
-    overflow-x: hidden;
-    /* min-height: 810px;
-    margin: 0;
+    min-height: 900px;
+    /* margin: 0;
     padding: 0; */
     line-height: 1.3;
     background-color: var(--white);
