--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -13,6 +13,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
+    min-height: 900px;
     background-color: rgba(0, 0, 0, 0.68);
     opacity: 0;
     visibility: hidden;
